--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,12 @@
-<!-- Welcome to {{title}}
-Hello {{user}}
-
-{{car1.carName}}
-
-<ul>
-  <li *ngFor="let car of cars">{{car.carName}}</li>
-</ul> -->
-
-<app-navi></app-navi>
-<app-brand></app-brand>
-<app-car></app-car>
-
-<router-outlet></router-outlet>
+<div class="container">
+  <app-navi></app-navi>
+  <div class="row">
+    <div class="col-md-3">
+      <app-brand></app-brand>
+    </div>
+    <div class="col-md-9">
+      <app-car></app-car>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
+</div>
