--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,15 @@
   <div class="row">
     <div class="col-md-3">
       <app-brand></app-brand>
+      <br>
+      <app-color></app-color>
+      <br>
+      <app-customer></app-customer>
     </div>
     <div class="col-md-9">
       <app-car></app-car>
+      <br>
+      <app-rental></app-rental>
     </div>
   </div>
   <router-outlet></router-outlet>
