--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,10 +1,23 @@
-<table class="table">
-    <tr *ngFor="let car of cars">
-        <td>{{car.Id}}</td>
-        <td>{{car.brandId}}</td>
-        <td>{{car.colorId}}</td>
-        <td>{{car.carName}}</td>
-        <td>{{car.modelYear}}</td>
-        <td>{{car.dailyPrice}}</td>
-    </tr>
-</table>
+<div *ngIf= "dataLoaded==false" class="spinner-border text-success" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  <table class="table" *ngIf= "dataLoaded==true">
+      <thead>
+      <tr>
+        <th>*</th>
+        <th>Car Name</th>
+        <th>BrandName</th>
+        <th>ColorName</th>
+        <th>Daily Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let car of carDetails">
+        <td>{{ car.carId }}</td>
+        <td>{{ car.carName }}</td>
+        <td>{{ car.brandName }}</td>
+        <td>{{ car.colorName }}</td>
+        <td>{{ car.dailyPrice }}</td>
+      </tr>
+    </tbody>
+  </table>
