--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -1,4 +1,4 @@
 <ul class="list-group" >
-    <li class="list-group-item active" aria-current="true">Customer Name</li>
+    <li class="list-group-item active" aria-current="true">Tüm Müşteriler</li>
     <li *ngFor="let customer of customers" class="list-group-item " aria-current="true">{{ customer.companyName }}</li>
 </ul>
