--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
-  <li class="list-group-item active" aria-current="true">Brand Name</li>
+  <li class="list-group-item active" aria-current="true">Tüm Markalar</li>
   <li *ngFor="let brand of brands" class="list-group-item" aria-current="true">
     {{ brand.name }}
   </li>
