--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,4 +1,4 @@
 <ul class="list-group" >
-    <li class="list-group-item active" aria-current="true">Color Name</li>
+    <li class="list-group-item active" aria-current="true">Tüm Renkler</li>
     <li *ngFor="let color of colors" class="list-group-item " aria-current="true">{{ color.name }}</li>
 </ul>
