--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,6 +1,7 @@
 <ul class="list-group">
-  <li class="list-group-item active" aria-current="true">Tüm Markalar</li>
-  <li *ngFor="let brand of brands" class="list-group-item" aria-current="true">
+  <li [class]="getAllBrandClass()" routerLink="/cars" (click)="cleanCurrentBrand()">Tüm Markalar</li>
+  <li *ngFor="let brand of brands" [class]="getCurrentBrandClass(brand)"(click)="setCurrentBrand(brand)" 
+  routerLink="/cars/brand/{{brand.id}}">
     {{ brand.name }}
   </li>
 </ul>
