--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,4 +1,5 @@
-<ul class="list-group" >
-    <li class="list-group-item active" aria-current="true">Tüm Renkler</li>
-    <li *ngFor="let color of colors" class="list-group-item " aria-current="true">{{ color.name }}</li>
-</ul>
+<ul class="list-group">
+    <li [class]="getAllColorClass()" routerLink="/cars">Tüm Renkler</li>
+    <li (click)="setCurrentColor(color)" routerLink="/cars/color/{{color.id}}"
+      *ngFor="let color of colors" [class]="getCurrentColorClass(color)">{{color.name}}</li>
+  </ul>
