--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <div class="container">
   <app-navi></app-navi>
+  <br>
   <div class="row">
-
     <div class="col-md-12">
       <router-outlet></router-outlet>
+      <br>
     </div>
+    
+    <app-footer></app-footer>
   </div>
 </div>
