--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,3 +1,8 @@
+<div class="col-md-8">
+  <div *ngIf= "dataLoaded==false" class="spinner-border text-success" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+
 <ul class="list-group">
     <li [class]="getAllColorClass()" routerLink="/cars">Tüm Renkler</li>
     <li (click)="setCurrentColor(color)" routerLink="/cars/color/{{color.id}}"
