--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -4,6 +4,8 @@
   </div>
 
 <ul class="list-group">
+    <input type="text" class="form-control"placeholder="Renk Ara.." id="colorAra">
+    <br>
     <li [class]="getAllColorClass()" routerLink="/cars">Tüm Renkler</li>
     <li (click)="setCurrentColor(color)" routerLink="/cars/color/{{color.id}}"
       *ngFor="let color of colors" [class]="getCurrentColorClass(color)">{{color.name}}</li>
