--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -11,9 +11,15 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="http://localhost:4200/" style="margin: 5px;">Anasayfa</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://localhost:4200/cars/" style="margin: 5px;">Araçlar</a>
+            <a class="nav-link active" aria-current="page" href="http://localhost:4200/" style="margin: 5px;">Hakkımızda</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="http://localhost:4200/" style="margin: 5px;">İletişim</a>
+          </li>
+         
           
         </ul>
         
