--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -125,7 +125,7 @@
                       }}
                     </li>
                     <button
-                      class="btn btn-success"
+                      class="btn btn-warning"
                       routerLink="/cars/cardetail/{{ car.carId }}"
                     >
                       Detay
