--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-    background: linear-gradient(to bottom right, wheat, pink)
+    background: linear-gradient(to bottom right, white, black, red)
 }
