--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -21,16 +21,16 @@
   
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="#!" class="text-dark">Anasayfa</a>
+              <a href="home" class="text-dark">Anasayfa</a>
             </li>
             <li>
-              <a href="#!" class="text-dark">Kiralama</a>
+              <a href="cars" class="text-dark">Araçlar</a>
             </li>
             <li>
-              <a href="#!" class="text-dark">Giriş</a>
+              <a href="" class="text-dark">Giriş</a>
             </li>
             <li>
-              <a href="#!" class="text-dark">Kayıt</a>
+              <a href="" class="text-dark">Kayıt</a>
             </li>
           </ul>
         </div>
@@ -42,16 +42,16 @@
   
           <ul class="list-unstyled">
             <li>
-              <a href="#!" class="text-dark">Araçlar</a>
+              <a href="/cars" class="text-dark">Araçlar</a>
             </li>
             <li>
-              <a href="#!" class="text-dark">Kiralamalar</a>
+              <a href="" class="text-dark">Kiralamalar</a>
             </li>
             <li>
-              <a href="#!" class="text-dark">Giriş Yap</a>
+              <a href="" class="text-dark">Giriş Yap</a>
             </li>
             <li>
-              <a href="#!" class="text-dark">Kayıt ol</a>
+              <a href="" class="text-dark">Kayıt ol</a>
             </li>
           </ul>
         </div>
