--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -1,23 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="width: 1290px; height: 80px;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="http://localhost:4200/">
+      <a class="navbar-brand" href="http://localhost:4200/home/">
         <img src="assets/turgutLogo.png" style="width: 100px; height: 60px;  margin: 15px;">
-           <a style="margin-left: 15px;">Rent a Car</a> </a>
+           <a style="margin-left: 15px;"></a> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://localhost:4200/" style="margin: 5px;">Anasayfa</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://localhost:4200/" style="margin: 5px;">Hakkımızda</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://localhost:4200/" style="margin: 5px;">İletişim</a>
+            <a class="nav-link active" aria-current="page" href="http://localhost:4200/cars/" style="margin: 5px;">Araçlar</a>
           </li>
          
           
